Fix some alignment issues in FF

--- a/brackets-what-to-work-on/styles.css
+++ b/brackets-what-to-work-on/styles.css
@@ -88,6 +88,7 @@
     border-radius: 3px;
     background-color: #764113;
     color: #FFF;
+    vertical-align: middle;
 }
 
 .dimmer {
